@@ -20,134 +20,107 @@
  */
 
 function clippy_start_page() {
-	global $config;
+	$helps = array();
 	
-	$clippy = get_cookie('clippy', false);
-	set_cookie('clippy', null);
-	
-	switch ($clippy) {
-		case 'choose_tabs_modules':
-			$steps = array();
-			$steps[] = array(
-				'element'=> '#clippy',
-				'intro' => __('Now you must go to modules, don\'t worry I teach you.')
-				);
-			$steps[] = array(
-				'element'=> "img[alt='Modules']",
-				'intro' => __('Please click in this tab.')
-				);
-			break;
-		case 'create_module':
-			$steps = array();
-			$steps[] = array(
-				'element'=> '#clippy',
-				'intro' => __('Now you must create the module, don\'t worry I teach you.')
-				);
-			$steps[] = array(
-				'element'=> "#moduletype",
-				'intro' => __('Choose the network server module.')
-				);
-			$steps[] = array(
-				'element'=> "input[name='updbutton']",
-				'intro' => __('And click in this button.')
-				);
-			break;
-		case 'create_module_second_step':
-			$steps = array();
-			$steps[] = array(
-				'element'=> '#clippy',
-				'intro' => __('We are going to fill the form.')
-				);
-			$steps[] = array(
-				'element'=> "#network_component_group",
-				'intro' => __('Please choose the Network Management.')
-				);
-			$steps[] = array(
-				'element'=> "#network_component",
-				'intro' => __('And choose the component with the name "Host Alive".')
-				);
-			$steps[] = array(
-				'element'=> "input[name='name']",
-				'intro' => __('You can change the name.')
-				);
-			$steps[] = array(
-				'element'=> "input[name='ip_target']",
-				'intro' => __('Check if this IP is the address of your machine.')
-				);
-			$steps[] = array(
-				'element'=> "input[name='crtbutton']",
-				'intro' => __('And only to finish it is clicking this button.')
-				);
-			break;
-		case 'create_module_third_step':
-			$steps = array();
-			$steps[] = array(
-				'element'=> '#clippy',
-				'intro' => __('Now, your module is just created.<br/> And the status color is <b>blue</b>.<br/>This meaning of blue status is the module is not executed for first time.<br/>In the next seconds if there is not a problem, the status color will change to red or green.')
-				);
-			break;
-	}
+	//==================================================================
+	//Help tour about the monitoring with a ping (step 3)
+	//------------------------------------------------------------------
+	$helps['monitoring_server_step_3'] = array();
+	$helps['monitoring_server_step_3']['steps'] = array();
+	$helps['monitoring_server_step_3']['steps'][] = array(
+		'element'=> '#clippy',
+		'intro' => __('Now you must go to modules, don\'t worry I teach you.')
+		);
+	$helps['monitoring_server_step_3']['steps'][] = array(
+		'element'=> "img[alt='Modules']",
+		'intro' => __('Please click in this tab.')
+		);
+	$helps['monitoring_server_step_3']['conf'] = array();
+	$helps['monitoring_server_step_3']['conf']['showBullets'] = 0;
+	$helps['monitoring_server_step_3']['conf']['showStepNumbers'] = 0;
+	$helps['monitoring_server_step_3']['conf']['next_help'] = 'monitoring_server_step_4';
+	//==================================================================
 	
 	
+	//==================================================================
+	//Help tour about the monitoring with a ping (step 4)
+	//------------------------------------------------------------------
+	$helps['monitoring_server_step_4'] = array();
+	$helps['monitoring_server_step_4']['steps'] = array();
+	$helps['monitoring_server_step_4']['steps'][] = array(
+		'element'=> '#clippy',
+		'intro' => __('Now you must create the module, don\'t worry I teach you.')
+		);
+	$helps['monitoring_server_step_4']['steps'][] = array(
+		'element'=> "#moduletype",
+		'intro' => __('Choose the network server module.')
+		);
+	$helps['monitoring_server_step_4']['steps'][] = array(
+		'element'=> "input[name='updbutton']",
+		'intro' => __('And click in this button.')
+		);
+	$helps['monitoring_server_step_4']['conf'] = array();
+	$helps['monitoring_server_step_4']['conf']['showBullets'] = 0;
+	$helps['monitoring_server_step_4']['conf']['showStepNumbers'] = 0;
+	$helps['monitoring_server_step_4']['conf']['next_help'] = 'monitoring_server_step_5';
+	//==================================================================
 	
-	?>
-	<script type="text/javascript">
-		var steps = <?php echo json_encode($steps); ?>;
-		var intro = null;
-		
-		$(document).ready(function() {
-			intro = introJs();
-			
-			
-			<?php
-			switch ($clippy) {
-				case 'choose_tabs_modules':
-					?>
-					intro.setOptions({
-						steps: steps,
-						showBullets: false,
-						showStepNumbers: false
-					});
-					clippy_set_help('create_module');
-					intro.start();
-					<?php
-					break;
-				case 'create_module':
-					?>
-					intro.setOptions({
-						steps: steps,
-						showBullets: false,
-						showStepNumbers: false
-					});
-					clippy_set_help('create_module_second_step');
-					intro.start();
-					<?php
-					break;
-				case 'create_module_second_step':
-					?>
-					intro.setOptions({
-						steps: steps,
-						showBullets: false,
-						showStepNumbers: false
-					});
-					clippy_set_help('create_module_third_step');
-					intro.start();
-					<?php
-					break;
-				case 'create_module_third_step':
-					?>
-					intro.setOptions({
-						steps: steps,
-						showBullets: false,
-						showStepNumbers: false
-					});
-					intro.start();
-					<?php
-					break;
-			}
-			?>
-		});
-	</script>
-	<?php
+	
+	//==================================================================
+	//Help tour about the monitoring with a ping (step 5)
+	//------------------------------------------------------------------
+	$helps['monitoring_server_step_5'] = array();
+	$helps['monitoring_server_step_5']['steps'] = array();
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> '#clippy',
+		'intro' => __('Now you must create the module, don\'t worry I teach you.')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> '#clippy',
+		'intro' => __('We are going to fill the form.')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> "#network_component_group",
+		'intro' => __('Please choose the Network Management.')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> "#network_component",
+		'intro' => __('And choose the component with the name "Host Alive".')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> "input[name='name']",
+		'intro' => __('You can change the name.')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> "input[name='ip_target']",
+		'intro' => __('Check if this IP is the address of your machine.')
+		);
+	$helps['monitoring_server_step_5']['steps'][] = array(
+		'element'=> "input[name='crtbutton']",
+		'intro' => __('And only to finish it is clicking this button.')
+		);
+	$helps['monitoring_server_step_5']['conf'] = array();
+	$helps['monitoring_server_step_5']['conf']['showBullets'] = 0;
+	$helps['monitoring_server_step_5']['conf']['showStepNumbers'] = 0;
+	$helps['monitoring_server_step_5']['conf']['next_help'] = 'monitoring_server_step_6';
+	//==================================================================
+	
+	
+	//==================================================================
+	//Help tour about the monitoring with a ping (step 6)
+	//------------------------------------------------------------------
+	$helps['monitoring_server_step_6'] = array();
+	$helps['monitoring_server_step_6']['steps'] = array();
+	$helps['monitoring_server_step_6']['steps'][] = array(
+		'element'=> '#clippy',
+		'intro' => __('Now, your module is just created.<br/> And the status color is <b>blue</b>.<br/>This meaning of blue status is the module is not executed for first time.<br/>In the next seconds if there is not a problem, the status color will change to red or green.')
+		);
+	$helps['monitoring_server_step_6']['conf'] = array();
+	$helps['monitoring_server_step_6']['conf']['showBullets'] = 0;
+	$helps['monitoring_server_step_6']['conf']['showStepNumbers'] = 0;
+	//==================================================================
+	
+	
+	clippy_write_javascript_helps_steps($helps);
 }
 ?>
