@@ -1,3 +1,10 @@
+2014-08-11  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/help/clippy/godmode_agentes_modificar_agente.php,
+	include/help/clippy/homepage.php,
+	include/help/clippy/godmode_agentes_configurar_agente.php,
+	include/functions_clippy.php: wip in the clippy.
+
 2014-08-11  Vanessa Gil <vanessa.gil@artica.es>
 
 	* godmode/agentes/agent_template.php: Fixed bug in FF
